Updated Croatian (hr) translation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104370 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hr/newsletter.lang
+++ b/hr/newsletter.lang
@@ -126,7 +126,7 @@ Odjava
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Označite ovdje ako više ne želite primati ikakve Mozilline poruke
 
 
 ;Remove me from all Mozilla emails
@@ -138,42 +138,42 @@ Spremi postavke
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Hvala što ste ažurirali vaše postavke e-pošte.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Odjavljeni ste.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Žao nam je što odlazite. Možete li nam javiti razlog vašeg odlaska?
 
 
 ;You send too many emails.
-You send too many emails.
+Šaljete previše poruka.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Vaši sadržaji mi nisu relevantni.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Dizajn vaših poruka je pretežak za čitanje.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Nisam se prijavio/la za ovo.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+S Mozillom radije ostajem u kontaktu putem Facebooka i Twittera.
 
 
 ;Submit
-Submit
+Pošalji
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Hvala što ste nam javili razlog odlaska.
 
 
