--- a/hr/snippets.lang
+++ b/hr/snippets.lang
@@ -118,11 +118,11 @@ Pozovite prijatelje na isprobavanje najnovijih mogućnosti u Firefoxu. <a href="
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Koristite Firefox na više računala? Sada možete sinkronizirati dodatne između svih računala. <a href="%">Saznajte kako aktivirati Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Brzo, brzo, brzo. <a %s>Firefox za Android je upravo dobio veliku nadogradnju</a>. Pomognite nam proširiti novost.
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
