--- a/hr/upgradedialog.lang
+++ b/hr/upgradedialog.lang
@@ -63,30 +63,30 @@ Vaša inačica Firefoxa više nije zaštićena od napada na Internetu.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Ovo je vaš zadnju podsjetnik prije automatske nadogradnje na najnoviju inačicu
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox više ne podržava vašu inačicu operativnog sustava, te neće biti siguran protiv napada na Internetu.
 
 
 ;We recommend:
-We recommend:
+Mi preporučamo:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Nadogradnju vašeg <a %s>operativnog sustava</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Preuzimanje kompatibilnog web preglednika
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalaciju besplatne nadogradnje na vaš <a %s>operativnog sustava</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Prije automatske nadogradnje, bit ćete obaviješteni još samo jednom.
 
 
