[l10n: gl] Bug 745608 - [gl] Translate strings for variants of the upgrade dialog for 3.6 users (updated upgradedialog.lang file for www.mozilla.org)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104376 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/upgradedialog.lang
+++ b/gl/upgradedialog.lang
@@ -87,6 +87,6 @@ Instalar unha anovación de balde para o seu <a %s>sistema operativo</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Vostede recibirá una aviso máis antes de actualizar automaticamente.
 
 
