Bug 745644 - [sv-SE] Translate strings for variants of the upgrade dialog for 3.6 users. Translation by Mikael Hiort af Ornäs <mikael.hafo@gmail.com>
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104377 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/upgradedialog.lang
+++ b/sv-SE/upgradedialog.lang
@@ -87,6 +87,6 @@ Installerar en gratisuppgradering av ditt <a %s>operativsystem</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Du kommer att påminnas ytterligare en gång innan du uppdateras automatiskt.
 
 
