Bug 745799 - [l10n: sv-SE] Updated snippets.lang file for www.mozilla.org. Translation by Mikael Hiort af Ornäs <mikael.hafo@gmail.com>
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104378 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/snippets.lang
+++ b/sv-SE/snippets.lang
@@ -122,7 +122,7 @@ Använder du Firefox på flera datorer? Nu kan du synkronisera dina tillägg mel
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Snabbt, snabbt, snabbt. <a %s>Firefox för Android har precis uppgraderats rejält</a>! Berätta det för alla du träffar.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
