[l10n: gl] updated snippets.lang file for www.mozilla.org (add new Android snippet for localization)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104379 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/snippets.lang
+++ b/gl/snippets.lang
@@ -122,6 +122,6 @@ Usa o Firefox en varios equipos? Agora pode sincronizar os complementos en todos
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Déase présa. <a %s>Firefox para Android ten unha gran anovación</a>. Axúdenos a difundilo.
 
 
