--- a/nb-NO/upgradedialog.lang
+++ b/nb-NO/upgradedialog.lang
@@ -23,7 +23,7 @@ Tøffere enn noensinne
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+En nyere versjon av Firefox kan beskytte deg bedre mot nettangrep.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -87,6 +87,6 @@ Installering av en gratis oppgradering til <a %s>operativsystemet</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Du vil bli spurt en gang til før du automatisk oppgraderes.
 
 
