--- a/ru/snippets.lang
+++ b/ru/snippets.lang
@@ -122,7 +122,7 @@ Firefox для Android теперь оптимизирован для работ
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Быстрый, шустрый и улётный. <a %s>Firefox для Android только что получил большое обновление</a>. Помогите нам рассказать о нём миру.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
