--- a/is/upgradedialog.lang
+++ b/is/upgradedialog.lang
@@ -87,6 +87,6 @@ Setja inn ókeypis uppfærslu fyrir <a %s>stýrikerfið</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Þú verður spurð(ur) einu sinni í viðbót áður en uppfært verður sjálfvirkt.
 
 
