--- a/is/snippets.lang
+++ b/is/snippets.lang
@@ -122,6 +122,6 @@ Ertu að nota Firefox á mörgum tölvum? Núna geturðu samstillt viðbæturnar
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Hraði, hraði, hraði. <a %s>Firefox fyrir Android var að fá stóra uppfærslu</a>. Hjálpaðu okkur með því að láta aðra vita.
 
 
