Updated Basque translation.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104391 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/eu/upgradedialog.lang
+++ b/eu/upgradedialog.lang
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+eskuratu segurtasunean berriena
 
 
 ;experience faster performance
@@ -39,19 +39,19 @@ hobetu errendimendua eta abiadura
 
 
 ;enjoy greater customization
-enjoy greater customization
+gozatu pertsonalizazio gehiagorekin
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Zure Firefox bertsioa laster lineako erasoen aurrean babes gabe egongo da.
 
 
 ;Stay safe online
-nabigatu sarean segurtasunez
+Nabigatu sarean segurtasunez
 
 
 ;Enjoy new features
-gozatu ezaugarri berriekin
+Gozatu ezaugarri berriekin
 
 
 ;URGENT!
@@ -63,30 +63,30 @@ Zure Firefoxen bertsioak ez zaitu gaur egungo sareko erasoetatik babesten.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Honakoa duzu bertsio berrira automatikoki eguneratu aurreko azken oroitarazpena
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefoxek ez du dagoeneko zure sistema eragilerako sostengurik ematen, eta lineako erasoen aurrean babes gabe egongo zara.
 
 
 ;We recommend:
-We recommend:
+Gure gomendioa:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Eguneratu <a %s>sistema eragilea</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Deskargatu nabigatzaile bateragarri bat
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalatu <a %s>sistema eragilea</a>ren doako eguneraketa bat
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Automatikoki eguneratu aurretik beste behin ohartaraziko zaitugu.
 
 
