--- a/uk/upgradedialog.lang
+++ b/uk/upgradedialog.lang
@@ -19,19 +19,19 @@
 
 
 ;More awesomeness than ever
-Дивовижніший чим будь-коли
+Дивовижніший ніж будь-коли
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Наявна нова версія Firefox, котра краще захищатиме вас він онлайнових атак.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Оновіться</a> - це швидко і безплатно!
+<a %s>Оновіться</a> — це швидко і безплатно!
 
 
 ;get the latest in security
-get the latest in security
+останнє слово в безпеці
 
 
 ;experience faster performance
@@ -39,19 +39,19 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+налаштовуйте під себе
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Ваша версія Firefox скоро буде вразлива до онлайнових атак.
 
 
 ;Stay safe online
-залишайтесь у безпеці
+Залишайтесь у безпеці
 
 
 ;Enjoy new features
-насолоджуйтесь можливостями
+Насолоджуйтесь можливостями
 
 
 ;URGENT!
@@ -63,30 +63,30 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Це останнє нагадування перед автоматичним оновленням до найостаннішої версії
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox більше не підтримує вашої операційної системи та буде вразливий до онлайнових атак.
 
 
 ;We recommend:
-We recommend:
+Ми рекомендуємо:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Оновити <a %s>операційну систему</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Завантажити сумісний браузер
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Встановити безплатне оновлення до вашої <a %s>операційної системи</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Ми запитаємо вас ще раз перед тим, як оновлення відбудеться автоматично.
 
 
