Update for snippets and upgradedialog lang files (bug 745594) - el locale
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104399 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/snippets.lang
+++ b/el/snippets.lang
@@ -122,6 +122,6 @@
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Ακόμα πιο γρήγορος! <a %s> ο Firefox για Android μόλις αναβαθμίστηκε σημαντικά</a>. Βοηθήστε μας να το διαδώσουμε.
 
 
