--- a/el/upgradedialog.lang
+++ b/el/upgradedialog.lang
@@ -87,6 +87,6 @@
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Θα ειδοποιηθείτε άλλη μια φορά πριν γίνει αυτόματη αναβάθμιση.
 
 
