--- a/el/upgradedialog.lang
+++ b/el/upgradedialog.lang
@@ -34,7 +34,7 @@
 Βάλτε ό,τι πιο σύγχρονο στην ασφάλεια
 
 
-;experience faster performance
+;Experience faster performance
 Δείτε καλύτερες επιδόσεις
 
 
@@ -88,5 +88,8 @@
 
 ;You will be prompted once more before being automatically updated.
 Θα ειδοποιηθείτε άλλη μια φορά πριν γίνει αυτόματη αναβάθμιση.
+
+;Learn more
+Μάθετε περισσότερα
 
 
