Updated Marathi Tranlsations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104401 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mr/upgradedialog.lang
+++ b/mr/upgradedialog.lang
@@ -19,19 +19,19 @@
 
 
 ;More awesomeness than ever
-पहिलेपेक्षा जास्त उत्कृष्ट
+नेहमीपेक्षा अधिक उत्कृष्ट
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+ऑनलाइन धोक्याविरुद्ध सुरक्षा पुरवण्यासाठी फायरफॉक्स्ची नवीन आवृत्ती उपलब्ध आहे.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>सुधारणा प्राप्त करा</a> - ते वेगवान व मोफत आहे!
+<a %s>सुधारणा प्राप्त करा</a> - हे वेगवान व मोफत आहे!
 
 
 ;get the latest in security
-get the latest in security
+सुरक्षामध्ये नाविन्य प्राप्त करा
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+अधिक पसंतीचे करण्याची मजा लुटा
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+फायरफॉक्सची ही आवृत्ती लवकरच ऑनलाइन धोक्याकरीता प्रात्र ठरेल.
 
 
 ;Stay safe online
@@ -55,38 +55,38 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;URGENT!
-अति आवश्यक!
+तातडीचे!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-फायरफॉक्सची आवृत्ती यापुढे ऑनलाइन हल्ला विरूद्ध सुरक्षीत राहणार नाही.
+फायरफॉक्सची आवृत्ती यापुढे ऑनलाइन धोक्याविरूद्ध सुरक्षीत राहणार नाही.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+सर्वात नवीन आवृत्तीकरीता स्वयं सुधारीत होण्यापूर्वी हे शेवटचे स्मरणपत्र आहे
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+फायरफॉक्स यापुढे कार्यप्रणालीच्या आवृत्तीकरीता समर्थन पुरवत नाही व ऑनलाइन धोक्याकरीता पात्र ठराल.
 
 
 ;We recommend:
-We recommend:
+आम्ही शिफारस करतो:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+<a %s>कार्यप्रणालीला</a> सुधारीत करा
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+सहत्व ब्राऊजर डाऊनलोड करत आहे
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+<a %s>कार्यप्रणालीवर</a> मोफत सुधारणा प्रतिष्ठापीत करत आहे
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+स्वयं सुधारणापूर्वी तुम्हाला पुन्हा विचारले जाईल.
 
 
