Updated Marathi Tranlsations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104402 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mr/newsletter.lang
+++ b/mr/newsletter.lang
@@ -62,7 +62,7 @@
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+तुमच्या समाचारपत्र सबस्क्रिप्शनची खात्री झाली आहे.
 
 
 ;Format
@@ -70,110 +70,110 @@ Your newsletter subscription has been confirmed.
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+तुम्ही सज्ज आहात! <span>जरा थांबा, आणखी आहे</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+सर्वात संबंधित माहिती प्राप्त करायची? स्वतःविषयी आणखी सांगा. व येथे असताना, इतर मोझिला समाचारकरीता प्रवेश करा.
 
 
 ;Firefox & You
-Firefox & You
+फायरफॉक्स व तुम्ही
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+आमचे इतर समाचारपत्र:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+पसंतीच्या ब्राऊजरपासून उत्कृष्ट प्राप्त करण्यासाठी सर्वात नवीन टिप व युक्ती मिळवा.
 
 
 ;Firefox Mobile
-Firefox Mobile
+फायरफॉक्स मोबाइल
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+फायरफॉक्स मोबाईलकरीता नवीन ॲडऑन्स् व गुणविशेष विषयी अधिक शिका.
 
 
 ;Beta News
-Beta News
+बिटा समाचार
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+शेवटच्या प्रकाशनपूर्वी फायरफॉक्स डेस्कटॉप व मोबाइलकरीता सर्वात नवीन गुणविशेषबाबत वाचा.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+चला मित्र होऊ!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+फायरफॉक्स तुमच्या पसंतीच्या सोशअल नेटवर्किंग स्थळांवर देखिल उपलब्ध आहे. आमच्याशी संपर्क करा व संभाषणात सामिल व्हा.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+<span>न्युजलेटेर सबस्क्रिप्शन्स्</span> व्यवस्थापीत करा
 
 
 ;Subscribe
-Subscribe
+सबस्क्राइब व्हा
 
 
 ;Unsubscribe
-Unsubscribe
+सबस्क्राइब अशक्य व्हा
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+सर्व मोझिला इमेल्सपासून स्वतःला काढून टाकायचे असल्यास येथे क्लिक करा
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+सर्व मोझिला इमेल्स् पासून स्वतःला काढून टाका
 
 
 ;Save Preferences
-Save Preferences
+पसंती साठवा
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+इमेल पसंती सुधारित करण्याबाबत धन्यवाद.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+तुम्ही सबस्क्राइब अशक्य झालात.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+तुम्ही जात आहात त्यामुळे क्षमा असावी. परंतु कृपया जाण्याचे कारण द्या?
 
 
 ;You send too many emails.
-You send too many emails.
+तुम्ही बरेच इमेल पाठवले आहे.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+तुमची अंतर्भुत माहिती माझ्याशी संबंधित नाही.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+तुमच्या इमेलची रचना वाचणे खूप कठिण आहे.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+मी याकरीता साइन अप केले नाही.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+त्याऐवजी मी फेसबूक व ट्विटरवर मोझिलासह संपर्क करतो.
 
 
 ;Submit
-Submit
+सादर करा
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+जाण्याचे कारण दिल्याबद्दल धन्यवाद.
 
 
