--- a/mr/snippets.lang
+++ b/mr/snippets.lang
@@ -122,6 +122,6 @@
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+लवकर, लवकर, लवकर. <a %s>अँड्राइडकरीता फायरफॉक्समध्ये मोठी सुधारणा आहे</a>. प्रसारकरीता आमची मदत करा.
 
 
