l10n: fy-NL, updates upgrade dialogs, translation by Wim Benes
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104406 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fy-NL/upgradedialog.lang
+++ b/fy-NL/upgradedialog.lang
@@ -1,4 +1,4 @@
-;Get the Newest Firefox
+﻿;Get the Newest Firefox
 Krij de nijste Firefox
 
 
@@ -23,7 +23,7 @@ Mear bjusterbaarliks as ea
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Der is in nije ferzje fan Firefox dy't jo better beskerme kin tsjin online oanfallen.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,19 +31,19 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+krij it lêste yn feilichheid
 
 
 ;experience faster performance
-krij fluggere prestaasjes
+krij bettere prestaasjes
 
 
 ;enjoy greater customization
-enjoy greater customization
+genietsje fan gruttere oanpasberheid
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Jo ferzje fan Firefox sil ynkoarten kwetsber wêze foar online oanfallen.
 
 
 ;Stay safe online
@@ -63,30 +63,30 @@ Jo ferzje fan Firefox wurdt net langer beskerme tsjin online oanfallen.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Dit is jo lêste werinnering foardat jo automatysk fernijd wurde nei de lêste ferzje
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox stipet jo bestjoeringssysteemferzje net langer en sil kwetsber wêze foar online oanfallen.
 
 
 ;We recommend:
-We recommend:
+Wy rikkemmandearje:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Fernij jo <a %s>bestjoeringssysteem</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Download in kompatibele browser
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Ynstallearje in fergese fernijing foar jo <a %s>bestjoeringssysteem</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Jo sille noch ien kear in notifikaasje krije eardat automatysk fernijd wurdt.
 
 
