--- a/gu-IN/upgradedialog.lang
+++ b/gu-IN/upgradedialog.lang
@@ -23,7 +23,7 @@ Firefox 3.6 કરતાં ઘણું ઝડપી
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+ત્યાં Firefox ની નવી આવૃત્તિ છે કે જેને તમે ઓનલાઇન હુમલા વિરુદ્દ સારી રીતે સુરક્ષિત રાખી શકો છો.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+સુરક્ષામાં તાજેતરની જુઓ
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+વધુ વૈવિધ્યપૂર્ણનો આનંદ માણો
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Firefox ની તમારી આવૃત્તિ ઝલ્દી ઓનલાઇન હુમલા માટે સંવેદનશીલ હશે.
 
 
 ;Stay safe online
@@ -63,30 +63,30 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+તમે આપમેળે તાજેતરની આવૃત્તિમાં સુધારો કરશો તે પહેલાં આ તમારી છેલ્લી સૂચના છે
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox તમારી ઓપરેટીંગ સિસ્ટમ આવૃત્તિને લાંબા સમય સુધી આધાર આપતુ નથી અને ઓનલાઇન હુમલા માટે સંવેદનશીલ રહેશે.
 
 
 ;We recommend:
-We recommend:
+અમે ભલામણ કરીએ છીએ:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+તમારી <a %s>ઓપરેટીંગ સિસ્ટમ</a> ને સુધારી રહ્યા છે
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+સુસંગત બ્રાઉઝરને ડાઉનલોડ કરી રહ્યા છે
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+તમારી <a %s>ઓપરેટીંગ સિસ્ટમ</a> નાં મફત સુધારાને સ્થાપિત કરી રહ્યા છે
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+આપમેળે સુધારો કરતા પહેલાં તમને એકવાર પૂછવામાં આવશે.
 
 
