Bug 745614 - [id] Translate strings for variants of the upgrade dialog for 3.6 users
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104408 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/id/upgradedialog.lang
+++ b/id/upgradedialog.lang
@@ -22,8 +22,8 @@ Lebih cepat daripada Firefox 3.6
 Lebih keren!
 
 
-;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+;There's a new version of Firefox that can better protect you against online attacks.
+Tersedia versi baru Firefox yang dapat melindungi Anda dari serangan daring.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+dapatkan fitur keamanan yang terbaru
 
 
 ;experience faster performance
@@ -39,19 +39,19 @@ rasakan kinerja yang tinggi
 
 
 ;enjoy greater customization
-enjoy greater customization
+nikmati berbagai pengubahsuaian
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Versi Firefox Anda akan rentan terhadap serangan daring.
 
 
 ;Stay safe online
-tetap aman di Internet
+Tetap aman di Internet
 
 
 ;Enjoy new features
-nikmati fitur barunya
+Nikmati fitur barunya
 
 
 ;URGENT!
@@ -63,30 +63,30 @@ Versi Firefox Anda tidak lagi terlindungi dari serangan daring di Internet.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Ini merupakan pemberitahuan terakhir sebelum peramban Anda diperbarui secara otomatis ke versi yang lebih baru
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox tidak lagi mendukung versi sistem operasi Anda dan akan rentan terhadap serangan daring.
 
 
 ;We recommend:
-We recommend:
+Kami sarankan untuk:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Meningkatkan versi (<i>upgrade</i>) <a %s>sistem operasi</a> Anda
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Mengunduh peramban yang kompatibel
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Memasang peningkatan versi (<i>upgrade</i>) gratis untuk <a %s>sistem operasi</a> Anda
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Anda akan ditanyai sekali lagi sebelum diperbarui secara otomatis.
 
 
