Bug 745618 - [kk] Translate strings for variants of the upgrade dialog for 3.6 users
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104409 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/kk/upgradedialog.lang
+++ b/kk/upgradedialog.lang
@@ -23,7 +23,7 @@ Firefox 3.6 нұсқасынан әлдеқайда жылдам
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Сізді желідегі шабуылдардан жақсырақ сақтайтын Firefox-тың жаңа нұсқасы бар.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+қауіпсіздіктің жақсысын алу
 
 
 ;experience faster performance
@@ -39,23 +39,23 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+өзіңіз үшін жақсырақ баптау
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Сіздегі Firefox нұсқасы жақын арада желідегі шабуылдарға төзімсіз болады.
 
 
 ;Stay safe online
-желідегі жұмысты қауіпсіз қылу
+Желідегі жұмысты қауіпсіз қылу
 
 
 ;Enjoy new features
-жаңа мүмкіндіктерін алу
+Жаңа мүмкіндіктерін алу
 
 
 ;URGENT!
-МАҢЫЗДЫ!
+БҰЛ МАҢЫЗДЫ!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
@@ -63,30 +63,30 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Соңғы нұсқаға дейін автоматты жаңарту алдында бұл сіздің соңғы ескертуіңіз
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox сіздің операциялық жүйе нұсқасын енді қолдамайды және желідегі шабуылдарға төзімсіз болады.
 
 
 ;We recommend:
-We recommend:
+Біз ұсынамыз:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+<a %s>Операциялық жүйеңізді</a> жаңарту
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Үйлесімді браузерді жүктеп алу
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+<a %s>Операциялық жүйеңіз</a> үшін тегін жаңартуды орнату
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Автоматты түрде жаңартылғанға дейін сізге тағы бір рет ескерту көрсетіледі.
 
 
