Updated Kannada Translation for upgradedialog.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104410 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/kn/upgradedialog.lang
+++ b/kn/upgradedialog.lang
@@ -19,11 +19,11 @@
 
 
 ;More awesomeness than ever
-ಹಿಂದೆಂದಿಗಿಂತಲೂ ಅಧ್ಭುತವಾಗಿದೆ
+ಹಿಂದೆಂದಿಗಿಂತಲೂ ಅದ್ಭುತವಾಗಿದೆ
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+ನಿಮ್ಮನ್ನು ಆನ್‌ಲೈನ್‌ ಧಾಳಿಗಳಿಂದ ಸಂರಕ್ಷಿಸುವ ಫೈರ್ಫಾಕ್ಸಿನ ಒಂದು ಹೊಸ ಆವೃತ್ತಿಯು ಲಭ್ಯವಿದೆ.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,23 +31,23 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+ಸುರಕ್ಷತೆಗೆ ಸಂಬಂಧಿಸಿದಂತೆ ಇತ್ತೀಚಿನದನ್ನು ಪಡೆದುಕೊಳ್ಳಿ
 
 
 ;experience faster performance
-ವೇಗವಾದ ಕಾರ್ಯನಿರ್ವಹಣೆ
+ವೇಗವಾದ ಕಾರ್ಯನಿರ್ವಹಣೆಯನ್ನು ಅನುಭವಿಸಿ
 
 
 ;enjoy greater customization
-enjoy greater customization
+ಉತ್ತಮ ಅಗತ್ಯಾನುಗುಣ ಬದಲಾಯಿಸುವಿಕೆಗೆ ಅವಕಾಶವಿದೆ
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+ನಿಮ್ಮ ಫೈರ್ಫಾಕ್ಸಿನ ಆವೃತ್ತಿಯು ಸಧ್ಯದಲ್ಲಿಯೆ ಆನ್‌ಲೈನ್ ಧಾಳಿಗೆ ಈಡಾಗುವ ಸಾಧ್ಯತೆ ಇದೆ.
 
 
 ;Stay safe online
-ಆನ್‌ಲೈನಿನಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿರಿ
+ಸುರಕ್ಷಿತವಾದ ಆನ್‌ಲೈನಿನಲ್ಲಿರಿ
 
 
 ;Enjoy new features
@@ -63,30 +63,30 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+ಇದು ಇತ್ತೀಚಿನ ಒಂದು ಆವೃತ್ತಿಗೆ ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಅಪ್‌ಡೇಟ್ ಮಾಡುವುದಕ್ಕೂ ಮುಂಚೆ ನೀಡಲಾಗುವ ಕಡೆಯ ಜ್ಞಾಪನೆಯಾಗಿದೆ
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+ಫೈರ್ಫಾಕ್ಸ್ ನಿಮ್ಮ ಗಣಕ ಕಾರ್ಯವ್ಯವಸ್ಥೆಯನ್ನು ಬೆಂಬಲಿಸುವುದಿಲ್ಲ ಮತ್ತು ಆನ್‌ಲೈನ್ ಧಾಳಿಗಳಿಗೆ ಈಡಾಗುವ ಸಂಭವವಿದೆ.
 
 
 ;We recommend:
-We recommend:
+ನಮ್ಮ ಸಲಹೆ:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+ನಿಮ್ಮ <a %s>ಕಾರ್ಯ ವ್ಯವಸ್ಥೆ</a>ಯನ್ನು ನವೀಕರಿಸುವಿಕೆ
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+ಹೊಂದಿಕೆಯಾಗುವ ಜಾಲವೀಕ್ಷಕವನ್ನು ಇಳಿಸಿಕೊಳ್ಳುವುದು
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+ನಿಮ್ಮ <a %s>ಕಾರ್ಯ ವ್ಯವಸ್ಥೆ</a>ಯ ಉಚಿತ ನವೀಕರಣವನ್ನು ಅನುಸ್ಥಾಪಿಸುವುದು
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಅಪ್‌ಡೇಟ್ ಮಾಡುವ ಮೊದಲು ನಿಮಗೆ ಇನ್ನೊಮ್ಮೆ ತಿಳಿಸಲಾಗುವುದು.
 
 
