Updated lang pages for Assamese
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104412 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/as/newsletter.lang
+++ b/as/newsletter.lang
@@ -30,11 +30,11 @@
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-মই <a href="%s">গোপনীয়তা নীতি</a> -লে সন্মত হয়
+মই <a href="%s">গোপনীয়তা নীতি</a> লে সন্মত হয়
 
 
 ;Sign me up!
-মোক চাইন আপ কৰক!
+মোক ছাইন আপ কৰক!
 
 
 ;We will only send you Mozilla-related information.
@@ -46,134 +46,134 @@
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-আমি Firefox -ৰ পৰা আৰু অধিক প্ৰাপ্ত কৰিবলে অতি শিঘ্ৰে সহায় &amp; কিটিপসমূহ , লগতে Mozilla -ৰ বিষয়ে কিছুমান আলোড়িত খবৰ আৰু এটা শ্ৰেয় ৱেব সৃষ্টি কৰিবলে আমি কিধৰণে কাম কৰোঁ সেয়া অংশীদাৰী কৰালে চাই আছো।
+আমি Firefox ৰ পৰা আৰু অধিক প্ৰাপ্ত কৰিবলে অতি শিঘ্ৰে সহায় &amp; কিটিপসমূহ , লগতে Mozilla ৰ বিষয়ে কিছুমান আলোড়িত খবৰ আৰু এটা শ্ৰেয় ৱেব সৃষ্টি কৰিবলে আমি কিধৰণে কাম কৰোঁ সেয়া অংশীদাৰী কৰালে চাই আছো।
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+মাহেকীয়া উন্নয়নসমূহলে স্বাক্ষৰ কৰক আৰু Mozilla বাতৰিৰ সৈতে সংযুক্ত থাকক, আপোনাৰ Firefox ব্ৰাউছাৰৰ পৰা সৰ্বাধিক প্ৰাপ্ত কৰিবলে শেহতীয়া কিটিপসমূহ অন্তৰ্ভুক্ত কৰাকৈ। সংযোগত থাকিবলে এইটোৱে সৰ্বোত্তম পদ্ধতি!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+আমি এইমাত্ৰ ই-মেইল দ্বাৰা আপোনাক এটা সুনিশ্চিতকৰণ বাৰ্তা পঠাইছো। এই মেইলিং তালিকালে আপোনাৰ স্বাক্ষৰণ বৈধ কৰিবলে এই সুনিশ্চিতকৰণ সংযোগত ক্লিক কৰক।
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+ইয়াৰ বিষয়ে সকলো আমাৰ <span>বাতৰিকাকত</span> ত পঢ়ক
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+আপোনাৰ বাতৰিকাকত স্বাক্ষৰণ সুনিশ্চিত কৰা হৈছে।
 
 
 ;Format
-Format
+বিন্যাস
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+আপুনি সাঁজু! <span>কিন্তু ৰ'ব, আৰু আছে</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+আটাইতকৈ প্ৰাসংগিক তথ্য বিচাৰে? আপোনাৰ বিষয়ে আমাক আৰু অলপ কওক। আৰু ইয়াত থকা অৱস্থাত, অন্য Mozilla বাতৰিৰ বাবে ছাইন আপ কৰক।
 
 
 ;Firefox & You
-Firefox & You
+Firefox আৰু আপুনি
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+আমাৰ অন্য বাতৰিকাকতসমূহ:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+আপোনাৰ পছন্দৰ ব্ৰাউছাৰৰ পৰা সৰ্বাধিক প্ৰাপ্ত কৰিবলে শেহতীয়া কিটিপসমূহ প্ৰাপ্ত কৰক।
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox মবাইল
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Firefox মবাইলৰ বাবে নতুন এড-অনসমূহ আৰু বৈশিষ্টসমূহৰ বিষয়ে জানক।
 
 
 ;Beta News
-Beta News
+বিটা বাতৰি
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+সৰ্বশেষ উন্মোচনৰ আগত Firefox ডেস্কটপ আৰু মবাইলৰ বাবে শেহতীয়া বৈশিষ্টসমূহৰ বিষয়ে পঢ়ক।
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+আহ'ক আমি বন্ধু হঁও!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox আপোনাৰ পছন্দৰ সামাজিক নেটৱাৰ্কিং ছাইটসমূহতো আছে। আমাৰ সৈতে সংযুক্ত হঁওক আৰু কথোপকথনত অংশগ্ৰহণ কৰক।
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+আপোনাৰ <span>বাতৰিকাকত স্বাক্ষৰণসমূহ</span> ব্যৱস্থাপনা কৰক
 
 
 ;Subscribe
-Subscribe
+স্বাক্ষৰ কৰক
 
 
 ;Unsubscribe
-Unsubscribe
+অস্বাক্ষৰ কৰক
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+ইয়াত চেক কৰক যদি আপুনি সকলো Mozilla ই-মেইলসমূহৰ পৰা আতৰিব বিচাৰে
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+মোক সকলো Mozilla ই-মেইলৰ পৰা আতৰাওক
 
 
 ;Save Preferences
-Save Preferences
+পছন্দসমূহ সংৰক্ষণ কৰক
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+আপোনাৰ ই-মেইল পছন্দসমূহ আপডেইট কৰাৰ বাবে ধন্যবাদ।
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+আপোনাক অস্বাক্ষৰ কৰা হৈছে।
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+আপোনাক যোৱা দেখি আমি দুঃখিত হৈছো। আপুনি কিয় গৈ আছে আমাক ক'ব নে?
 
 
 ;You send too many emails.
-You send too many emails.
+আপুনি বহু বেছি ই-মেইল পঠায়।
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+আপোনাৰ সমল মোলে প্ৰাসংগিক নাছিল।
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+আপোনাৰ ই-মেইল ৰূপাঙ্কণ পঢ়িবলে কঠিন আছিল।
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+মই ইয়াৰ বাবে ছাইন আপ কৰা নাই।
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+মই ইয়াৰ পৰিৱৰ্তে Mozilla ৰ সৈতে Facebook আৰু Twitter ত সংযুক্ত আছোঁ।
 
 
 ;Submit
-Submit
+জমা দিয়ক
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+আপুনি কিয় এৰি গৈ আছে আমাক কোৱাৰ বাবে ধন্যবাদ।
 
 
