--- a/as/download.lang
+++ b/as/download.lang
@@ -35,6 +35,6 @@ Firefox নিৰ্বাচন কৰাৰ বাবে ধন্যবাদ
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Mozilla Firefox ৱেব ব্ৰাউছাৰ
 
 
