--- a/as/snippets.lang
+++ b/as/snippets.lang
@@ -2,126 +2,126 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-আপুনি য'লৈকে যায় Firefox -ক লৈ যাওক! Android -ৰ বাবে শেহতীয়া Firefox এতিয়া জীৱন্ত আৰু আপোনাৰ প্ৰয়োগৰ বাবে সাজু। <a href="%s">ইয়াক এতিয়াই প্ৰাপ্ত কৰক।</a>
+আপুনি য'লৈকে যায় Firefox ক লৈ যাওক! Android ৰ বাবে শেহতীয়া Firefox এতিয়া জীৱন্ত আৰু আপোনাৰ প্ৰয়োগৰ বাবে সাজু। <a href="%s">ইয়াক এতিয়াই প্ৰাপ্ত কৰক।</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-এতিয়া যিহেতু আপোনাৰ ওচৰত শেহতীয়া সংস্কৰণ আছে, Firefox -ৰ সৈতে আপুনি কৰিব পৰা <a href="%s">সকলো কাৰ্য্যৰ বিষয়ে জানক</a>।
+এতিয়া যিহেতু আপোনাৰ ওচৰত শেহতীয়া সংস্কৰণ আছে, Firefox ৰ সৈতে আপুনি কৰিব পৰা <a href="%s">সকলো কাৰ্য্যৰ বিষয়ে জানক</a>।
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-আপুনি Firefox -ৰ শেহতীয়া সংস্কৰণ ব্যৱহাৰ কৰা নাই। ৱেবৰ শ্ৰেষ্ঠ পাবলৈ <a href="%s">আজি উন্নত কৰক</a>!
+আপুনি Firefox ৰ শেহতীয়া সংস্কৰণ ব্যৱহাৰ কৰা নাই। ৱেবৰ শ্ৰেষ্ঠ পাবলৈ <a href="%s">আজি উন্নত কৰক</a>!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Firefox -ৰ শেহতীয়া বৈশিষ্টসমূহক <a href="%s">Aurora</a> -ত প্ৰাপ্ত কৰক।
+Firefox ৰ শেহতীয়া বৈশিষ্টসমূহক <a href="%s">Aurora</a> ত প্ৰাপ্ত কৰক।
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Firefox -ৰ ভৱিষ্যতৰ এটা চমু পূৰ্বদৰ্শন চাওক। <a href="%s">Firefox Aurora ডাউনল'ড কৰক</a> আৰু শেহতীয়া বৈশিষ্টসমূহক পৰীক্ষা কৰক।
+Firefox ৰ ভৱিষ্যতৰ এটা চমু পূৰ্বদৰ্শন চাওক। <a href="%s">Firefox Aurora ডাউনল'ড কৰক</a> আৰু শেহতীয়া বৈশিষ্টসমূহক পৰীক্ষা কৰক।
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Firefox -ৰ আগতে তাৰ Beta থাকে, আৰু Beta -ৰ আগতে Aurora থাকে। শেহতীয়া শ্ৰেষ্ঠ বৈশিষ্টসমূহৰ কাৰণে এতিয়া <a href="%s">Firefox Aurora পৰীক্ষা কৰক</a>।
+Firefox ৰ আগতে তাৰ Beta থাকে, আৰু Beta ৰ আগতে Aurora থাকে। শেহতীয়া শ্ৰেষ্ঠ বৈশিষ্টসমূহৰ কাৰণে এতিয়া <a href="%s">Firefox Aurora পৰীক্ষা কৰক</a>।
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">এজন Firefox সভ্য হওঁক</a> আৰু Firefox -ক বিশ্বৰ সৈতে অংশীদাৰী কৰিবলে প্ৰয়োজনীয় সকলোবোৰ প্ৰাপ্ত কৰক!
+<a href="%s">এজন Firefox সভ্য হওঁক</a> আৰু Firefox ক বিশ্বৰ সৈতে অংশীদাৰী কৰিবলে প্ৰয়োজনীয় সকলোবোৰ প্ৰাপ্ত কৰক!
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
+Firefox গৰ্বিতভাৱে লাভবিহিন আৰু আপোচ নকৰাকৈ আপোনাৰ বাবে উদ্ভাৱন কৰিবলে মুক্ত। আমাৰ লক্ষ্যৰ বিষয়ে <a href="%s">অধিক জানক</a>।
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
+দ্ৰুত, স্থিতিস্থাপক আৰু সুৰক্ষিত, Firefox আপোনাক প্ৰথমত ৰখা একমাত্ৰ ব্ৰাউছাৰ। আমাক কাৰ সহায়ত ৰূপাঙ্কণত ভিন্ন কৰা হয় তাৰ বিষয়ে <a href="%s">অধিক জানক</a>।
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
+<a href="%s">Firefox ক আপোনাৰ Android টেবলেটত ডাউনল'ড কৰক</a> আৰু ৱেবৰ শক্তিক আপোনাৰ হাতত থওক। ইয়াক এতিয়া প্ৰাপ্ত কৰক।
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
+আপোনাৰ প্লাগিনসমূহক বৰ্তমান তাৰিখলৈ উন্নত ৰাখক আৰু অনলাইন সুৰক্ষিত থাকক <a href="%s">প্লাগিন নীৰিক্ষণ</a> ৰ সৈতে।
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
+আপোনাৰ Firefox ক শৈলীত ৰাখক। ইয়াক শেহতীয়া <a href="%s">পাৰচোনাসমূহ</a> ৰ সৈতে সজাওক।
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
+অত্যাধিক টেব? এটা <a href="%s">পেনোৰামা</a> ৰ সৈতে আপোনাৰ ব্ৰাউছাৰক ক্লাটাৰৰ পৰা পুনৰ উদ্ধাৰ কৰক।
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
+কোনো দুজন Firefox ব্যৱহাৰকাৰী একে নহয়। <a href="%s">আপোনাৰ ব্ৰাউছাৰলে যিকোনো বুটাম যোগ কৰক</a> অথবা আপুনি ব্যৱহাৰ নকৰাসমূহ আতৰাওক। ঘৰত ৰাইট-ক্লিক কৰি স্বনিৰ্বাচন কৰক বাছক।
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
+আপোনাৰ Firefox ক পাৰচোনাসমূহৰ সৈতে সজাওক। চেষ্টা কৰিবলে উলুটাওক, প্ৰয়োগ কৰিবলে ক্লিক কৰক। অথবা হাজাৰটা অধিকৰ বাবে <a href="%s">গেলাৰি</a> ভ্ৰমণ কৰক!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
+Beta লে যোৱাৰ আগত, শেহতীয়া বৈশিষ্টসমূহ প্ৰথমবাৰৰ বাবে চাওক। <a href="%s">Firefox Aurora ডাউনল'ড কৰক।</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
+কাৰ সহায়ত ই Beta লৈ যায় তাকে নিৰ্ধাৰণ কৰাত আমাক সহায়ৰ বাবে বৈশিষ্টসমূহ পৰিক্ষা কৰিবলে <a href="%s">Firefox Aurora ডাউনল'ড কৰক</a>।
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
+প্ৰথমতে অংশগ্ৰহণ কৰক আৰু Firefox ৰ ভৱিষ্যত সজোৱাত সহায় কৰক। <a href="%s">Firefox Aurora ডাউনল'ড কৰক।</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
+Android ৰ বাবে Firefox এতিয়া আপুনি টেবলেটসমূহত ব্ৰাউছ কৰাৰ পদ্ধতিৰ বাবে অনুকূলিত। <a href="%s">ৱেবৰ শক্তিক আপোনাৰ আঙুলিত প্ৰাপ্ত কৰক</a>।
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
+আপোনাৰ Android টেবলেটত Firefox ডাউনল'ড কৰক আৰু ৱেবৰ শক্তিক আপোনাৰ হাতত আনক। <a href="%s">ইয়াক এতিয়া প্ৰাপ্ত কৰক</a>।
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Firefox Beta ডাউনল'ড কৰক</a>, আৰু পৰৱৰ্তী Firefox ক আমাৰ ৪৫০ নিযুত ব্যৱহাৰকাৰীৰ বাবে আৰু অধিক আকৰ্শণীয় কৰাত সহায় কৰিবলে সঁহাৰি জমা দিয়ক।
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+বৈশিষ্টসমূহ পৰিক্ষা কৰক, সিহতক পৰিস্ৰাৱন আৰু পালিচ কৰক আৰু আমাৰ পৰৱৰ্তী সংস্কৰণ সকলোতকৈ উন্নত কৰাত আমাক সহায় কৰক। <a href="%">Firefox Beta আজিয়ে ডাউনল'ড কৰক!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Firefox ক ভাল পায়? আমাৰ পৰৱৰ্তী সংস্কৰণ আৰু অধিক উত্তম কৰিবলে সহায় কৰিব বিচাৰে? <a href="%">Firefox Beta ডাউনল'ড কৰক</a> আৰু আমাক আজি সঁহাৰি দিয়ক!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+আপুনি শেহতীয়া Firefox Beta চলাই আছে নে? <a href="%">ইয়াক এতিয়া প্ৰাপ্ত কৰক</a> আৰু আমাল শেহতীয়া বৈশিষ্টসমূহ পৰিক্ষা কৰাত সহায় কৰক।
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+শেহতীয়া Firefox Beta ত নাই? আমাৰ পৰৱৰ্তী সংস্কৰণৰ বাবে আমি কিহত কাম কৰি আছো জানিবলে <a href="%">ইয়াক আজি প্ৰাপ্ত কৰক</a>।
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+আপোনাৰ সঁহাৰি অংশীদাৰী কৰিব বিচাৰে? <a href="%">কিধৰণে কৰিব জানক</a> আৰু Firefox ৰ পৰৱৰ্তী সংস্কৰণ আৰু অধিক আকৰ্শণীয় কৰিবলে সহায় কৰক।
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Firefox Beta ব্যৱহাৰকাৰীসমূহ: আমাৰ পৰৱৰ্তী সংস্কৰণত সৰ্বশেষ টান মৰাত সহায় কৰিবলে <a href="%">সঁহাৰি প্ৰদান কৰক</a>।
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Firefox ৰ পৰৱৰ্তী সংস্কৰণ আৰু অধিক আকৰ্শণীয় কৰিবলে সহায় কৰক। <a href="%">এজন সভ্য হওক</a> আৰু Firefox Beta ক আপোনাৰ বন্ধুসকলৰ সৈতে অংশীদাৰী কৰক।
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+আহিব লগিয়া Firefox বৈশিষ্টসমূহ পূৰ্বদৰ্শন কৰিবলে বন্ধুসকল আমন্ত্ৰণ জনাওক। <a href="%">এজন সভ্য হওক</a> আৰু আজিয়ে Firefox Aurora অংশীদাৰী কৰক।
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Firefox ক কেইবাটাও কমপিউটাৰত ব্যৱহাৰ কৰি আছে? এতিয়া আপুনি আপোনাৰ এড-অনসমূহক সিহত সকলোতে সংমিহলি কৰিব পাৰিব। <a href="%">সংমিহলি কেনেধৰণে সক্ৰিয় কৰিব সন্ধান কৰক।</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+দ্ৰুত, দ্ৰুত, দ্ৰুত। <a %s>Android ৰ বাবে Firefox এ এইমাত্ৰ এটা ডাঙৰ উন্নয়ন পালে</a>। আমাক শব্দ বিস্তাৰ কৰাত সহায় কৰক।
 
 
