--- a/as/upgradedialog.lang
+++ b/as/upgradedialog.lang
@@ -15,7 +15,7 @@
 
 
 ;Much faster than Firefox 3.6
-Firefox 3.6 -কে বহু গুণে দ্ৰুত
+Firefox 3.6 কে বহু গুণে দ্ৰুত
 
 
 ;More awesomeness than ever
@@ -23,15 +23,14 @@ Firefox 3.6 -কে বহু গুণে দ্ৰুত
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
-
+Firefox ৰ এটা নতুন সংস্কৰণ আছে যি আপোনাক অনলাইন আক্ৰমণসমূহৰ বিপৰিতে অধিক ভাল সুৰক্ষা দিব পাৰিব।
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>উন্নত সংস্কৰণ পাওক</a> - ই দ্ৰুত আৰু বিনামূলীয়া!
+<a %s>উন্নত সংস্কৰণ পাওক</a> — ই দ্ৰুত আৰু বিনামূলীয়া!
 
 
 ;get the latest in security
-get the latest in security
+সুৰক্ষাত শেহতীয়া প্ৰাপ্ত কৰক
 
 
 ;experience faster performance
@@ -39,11 +38,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+উন্নত স্বনিৰ্বাচনৰ আনন্দ লওক
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+আপোনাৰ Firefox ৰ সংস্কৰণ অতি সোনকালে অনলাইন আক্ৰমণৰ সন্মুখিন হব।
 
 
 ;Stay safe online
@@ -59,34 +58,34 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-আপোনাৰ Firefox -ৰ সংস্কৰণ অন-লাইন আক্ৰমণৰ বাবে আৰু সুৰক্ষিত নহয়।
+আপোনাৰ Firefox ৰ সংস্কৰণ অন-লাইন আক্ৰমণৰ বাবে আৰু সুৰক্ষিত নহয়।
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+এইটো আপোনাক স্বচালিতভাৱে শেহতীয়া সংস্কৰণলে উন্নত কৰাৰ আগৰ শেষ সোৱৰণী
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox এ আপোনাৰ অপাৰেটিং চিস্টেমৰ সংস্কৰণ সমৰ্থন নকৰে আৰু অনলাইন আক্ৰমণৰ সন্মুখিন হব।
 
 
 ;We recommend:
-We recommend:
+আমি উপদেশ দিও:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+আপোনাৰ <a %s>অপাৰেটিং চিস্টেম</a> উন্নত কৰা
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+এটা সুসংগত ব্ৰাউছাৰ ডাউনল'ড কৰা
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+আপোনাৰ <a %s>অপাৰেটিং চিস্টেম</a> লে এটা বিনামূলীয়া উন্নয়ন ইনস্টল কৰা
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+আপোনাক স্বচালিতভাৱে উন্নত কৰাৰ আগত আৰু এবাৰ সোধা হব।
 
 
