--- a/eo/snippets.lang
+++ b/eo/snippets.lang
@@ -122,6 +122,6 @@ Invitu geamikojn provi estontajn trajtojn de Firefox. <a href="%">Iĝu kunlabora
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Rapida, rapida, rapida. <a %s>Firefox por Android ĵus ricevis grandan ĝisdatigon</a>. Helpu nin diskonigi tion.
 
 
