updated latvian translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104418 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lv/snippets.lang
+++ b/lv/snippets.lang
@@ -122,6 +122,6 @@ Izmanto Firefox no vairākiem datoriem? Tagad Tu vari sinhronizēt papildinājum
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Ātrs, ātrs, ātrs. <a %s>Firefox Android versijai lieli uzlabojumi</a>. Palīdzi un padod šo ziņu tālāk.
 
 
