--- a/lv/upgradedialog.lang
+++ b/lv/upgradedialog.lang
@@ -87,6 +87,6 @@ Instalēt bezmaksas atjauninājumu jūsu <a %s>operētājsistēmai</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Pirms automātiskās atjaunināšanas jums šo jautās vēl vienu reizi.
 
 
