l10n:lij new string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104420 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -122,6 +122,6 @@ T'adêuvi o Firefox in tànti computer? Òua ti peu sincronizâ i teu conponént
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Velôce! E méscite, ti me pâ rinbanbîo! <a %s>Firefox pe Android o l'à fæto 'n gràn agiornaménto</a>. Aigiùttine a fâlo savéi in gîo.
 
 
