Bug 745635 - [pt-PT] Translate strings for variants of the upgrade dialog for 3.6 users
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104422 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-PT/upgradedialog.lang
+++ b/pt-PT/upgradedialog.lang
@@ -23,7 +23,7 @@ Mais fantástico que nunca
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Existe uma nova versão do Firefox tque o pode proteger melhor contra ataques online.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+obtenha os últimos melhoramentos de segurança
 
 
 ;experience faster performance
@@ -39,19 +39,19 @@ tenha um melhor desempenho
 
 
 ;enjoy greater customization
-enjoy greater customization
+desfrute de uma maior personalização
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Brevemente a sua versão do Firefox será vulnerável a ataques online.
 
 
 ;Stay safe online
-mantenha-se seguro online
+Mantenha-se seguro online
 
 
 ;Enjoy new features
-aprecie as novas funcionalidades
+Aprecie as novas funcionalidades
 
 
 ;URGENT!
@@ -63,30 +63,30 @@ A sua versão do Firefox já não está protegida contra ataques online.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Esta é a última lembrança antes de ser atualizado automaticamente para a última versão
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+O Firefox já não suporta a versão do seu sistema operativo e está vulnerável a ataques online.
 
 
 ;We recommend:
-We recommend:
+Nós recomendamos:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Atualizar o <a %s>sistema operativo</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Transferir um navegador compatível
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalar uma atualização gratuíta ao <a %s>sistema operativo</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Será avisado mais uma vez antes de atualizr automaticamente.
 
 
